--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@mui/material": "^6.3.0",
     "@reduxjs/toolkit": "^2.5.0",
     "firebase": "^11.1.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "6"
+    "react-router-dom": "6",
+    "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
